fix(sidebaritem): Fix hover background + fix outline z-index

--- a/packages/component-library/src/components/plmg-sidebar-item/plmg-sidebar-item.scss
+++ b/packages/component-library/src/components/plmg-sidebar-item/plmg-sidebar-item.scss
@@ -18,6 +18,7 @@
   border-radius: tokens.$plmg-border-radius-s;
   background: tokens.$plmg-color-background-neutral;
   color: tokens.$plmg-color-text-neutral-weak;
+  position: relative;
 
   font-family: tokens.$plmg-font-family-sans;
   font-style: normal;
@@ -92,13 +93,14 @@
   }
 
   // States
-  &:hover {
-    background: tokens.$plmg-color-background-primary;
-  }
   &:focus-visible {
     background: tokens.$plmg-color-background-neutral-hover;
     outline: tokens.$plmg-border-width-l solid
       tokens.$plmg-color-border-standout;
+    z-index: 2;
+  }
+  &:hover {
+    background: tokens.$plmg-color-background-primary;
   }
 }
 // ------------- END Component style ---------------
